Resolved merge conflicts in AccountControllerTest and TransactionControllerTest